--- a/style.css
+++ b/style.css
@@ -70,3 +70,41 @@ header {
   width: 100%;
   object-fit: cover;
 }
+
+/* featured section */
+.featured-content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  text-align: center;
+  margin-top: 50px;
+}
+.single-featured-content div {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+}
+.single-featured-content img {
+  height: 80%;
+  object-fit: cover;
+}
+.single-featured-content a {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #272727;
+  display: block;
+  margin-top: 24px;
+}
+.featured-01 {
+  background-color: rgba(167, 33, 98, 0.15);
+}
+.featured-02 {
+  background-color: rgba(5, 151, 160, 0.15);
+}
+.featured-03 {
+  background-color: rgba(71, 125, 17, 0.15);
+}
