footer section added

--- a/style.css
+++ b/style.css
@@ -186,3 +186,30 @@ header {
   border: none;
   border-radius: 8px;
 }
+
+/* footer section */
+footer {
+  background-color: #111010;
+  padding: 80px 0;
+}
+.footer-content {
+  max-width: 650px;
+  margin: 0 auto;
+  text-align: center;
+}
+.footer-title {
+  font-size: 3rem;
+  font-weight: 800;
+  color: #fff;
+  margin-bottom: 24px;
+}
+.footer-info {
+  font-size: 1.25rem;
+  color: rgba(255, 255, 255, 0.8);
+  line-height: 1.875rem;
+  margin-bottom: 32px;
+}
+.footer-copyright {
+  font-size: 1.125rem;
+  color: rgba(255, 255, 255, 0.5);
+}
